objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountId_of_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>Organization Name of Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Organization Name of Record)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adhoc_name__c</fullName>
        <description>TQB Application.</description>
        <label>TQB Ad-Hoc Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Time_Research_Was__c</fullName>
        <description>STAA</description>
        <label>At Time Research Was</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA Employee (Not SES)</fullName>
                </value>
                <value>
                    <fullName>EPA SES, ST, SL or Title 42 Employee</fullName>
                </value>
                <value>
                    <fullName>PHS Assigned to EPA</fullName>
                </value>
                <value>
                    <fullName>Non EPA Author</fullName>
                    <isActive>false</isActive>
                    <label>Non EPA Author</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>BAP Provisioning Form does not exist or does not have a match to the search criteria</errorMessage>
            <filterItems>
                <field>Forms__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BAP User Provisioning, BAP Provisioning</value>
            </filterItems>
            <infoMessage>Please select the appropriate BAP Provisioning form for the user authorization</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status_Desc__c</fullName>
        <label>Bargain Unit Status Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status__c</fullName>
        <label>Bargain Unit Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Application</label>
        <referenceTo>Candidate_Application__c</referenceTo>
        <relationshipLabel>Ad-Hocs &amp; Letter Writers</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STAA</description>
        <label>Cover Form</label>
        <referenceTo>Cover_Form__c</referenceTo>
        <relationshipLabel>Authors</relationshipLabel>
        <relationshipName>Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a Contact is logically deleted.  Some records my not be physically deleted if referenced by another object.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Org prototype field.</description>
        <label>Detail Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Detail Orgs</relationshipLabel>
        <relationshipName>Detail_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_You_have_Record_of_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>STAA</description>
        <label>Record of Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPA_Agreement_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA License.Created to capture the EPA License.</description>
        <label>Record Id</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>Inventor/s</relationshipLabel>
        <relationshipName>Inventors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPA_File__c</fullName>
        <description>FTTA application. Created to navigate to the parent agreement record.</description>
        <formula>IF(RecordType.DeveloperName = 'FTTA_License_Inventor' ,
HYPERLINK("/"&amp; EPA_Agreement_License__r.Id, EPA_Agreement_License__r.EPA_File_2__c),
HYPERLINK("/"&amp; Account.EPA_Agreement__r.Id, Account.EPA_Agreement__r.EPA_File_2__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please click on the link to go the Agreement/ License.</inlineHelpText>
        <label>EPA File #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Disclosure_Filing_Days_Overdue__c</fullName>
        <formula>IF(
  AND(ISBLANK(OGE_450_Form_Submitted_Date__c),
      NOT(ISBLANK(Ethics_Disclosure_Filing_Due_Date__c))),
  TODAY()- Ethics_Disclosure_Filing_Due_Date__c,
  IF(AND(
          NOT(ISBLANK(OGE_450_Form_Submitted_Date__c)),
          NOT(ISBLANK(Ethics_Disclosure_Filing_Due_Date__c)),
          OGE_450_Form_Submitted_Date__c &gt; Ethics_Disclosure_Filing_Due_Date__c),
  OGE_450_Form_Submitted_Date__c - OGE_450_Form_Submitted_Date__c,
  0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethics Disclosure Filing Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethics_Disclosure_Filing_Due_Date__c</fullName>
        <description>Date field for identifying the due date for an EPA Employee to file an OGE-450 form for the current year. John Jenkins. 2019.05.28.</description>
        <label>Ethics Disclosure Filing Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Funding Official (FCO). The end user may edit his FCO from the "Edit My Approvers" page.</description>
        <label>Funding Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Funding_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSA_SmartPay_Training_Date__c</fullName>
        <description>GSA SmartPay Purchase Card training taken date.</description>
        <label>GSA SmartPay Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSA_SmartPay_Training_Expiry_Date__c</fullName>
        <formula>IF(
AND(Month(  GSA_SmartPay_Training_Date__c )=2,Day(GSA_SmartPay_Training_Date__c)=29),
DATE(YEAR(GSA_SmartPay_Training_Date__c) + 2, Month(GSA_SmartPay_Training_Date__c),Day(GSA_SmartPay_Training_Date__c)-1),
DATE(YEAR(GSA_SmartPay_Training_Date__c) + 2, Month(GSA_SmartPay_Training_Date__c),Day(GSA_SmartPay_Training_Date__c))
)</formula>
        <label>GSA SmartPay Training Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org__c</fullName>
        <label>HR Org</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org_of_Record__c</fullName>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>HR Org of Record</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventor_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>FTTA License. Created to capture the inventor amount for FTTA License.</description>
        <label>Inventor Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventor_Type__c</fullName>
        <description>FTTA Application</description>
        <label>Inventor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA Inventor</fullName>
                </value>
                <value>
                    <fullName>Partner Inventor</fullName>
                </value>
                <value>
                    <fullName>EPA Principal Inventor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ELMS_Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the person serves in the role of EPA Lean Management System (ELMS) Champion</description>
        <inlineHelpText>Indicates whether the person serves in the role of EPA Lean Management System (ELMS) Champion</inlineHelpText>
        <label>Is ELMS Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Problem_Solving_Corps_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the person is a member of the EPA Problem Solving Corps</description>
        <label>Is Problem Solving Corps Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <externalId>true</externalId>
        <label>LAN ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Office_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>FTTA Application. Created to capture the lab amount input from the user.</description>
        <inlineHelpText>Please enter the amount for the Lab/Office.</inlineHelpText>
        <label>Lab/Office Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laboratory_Office_Name__c</fullName>
        <label>Laboratory/Office Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Manager)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <label>Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notificaiton_Tracker__c</fullName>
        <description>Date/Time field used to set date for recurring reminders of OGE-450 filing due date. John Jenkins. 2019.12.03.</description>
        <label>Notification Tracker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OGE_450_Form_Submitted_Date__c</fullName>
        <description>Date field to be updated when contact submits OGE-450 form. John Jenkins. 2019.06.25.</description>
        <label>Ethics Disclosure Filing Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OGE_450_Notification_Last_Sent_Date__c</fullName>
        <description>Date field to track date OGE-450 notification last sent in order for time trigger to send reminder a week later. John Jenkins. 2019.07.06.</description>
        <label>Ethics Disclosure Notification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OGE_450_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for tracking Notification email.  Emails go out weekly while checked and stop when it is unchecked. John Jenkins. 2019.06.07.</description>
        <label>Ethics Disclosure Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occ_Series__c</fullName>
        <label>Occupational Series</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occ_Series_of_Record__c</fullName>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>Occupational Series of Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ord_rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TQB Application.</description>
        <inlineHelpText>Select the ORD representative.</inlineHelpText>
        <label>ORD rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>ORD Contact doesn't exist.</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>ORD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASTA_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>PASTA Person ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Title_of_Record__c</fullName>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>Position Title of Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricipal_Author__c</fullName>
        <defaultValue>false</defaultValue>
        <description>STAA</description>
        <label>Principal Author?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPV_CODE_DESCR__c</fullName>
        <label>Supervisor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field used to trigger workflow(s). Used for OGE-450 reminder emails. John Jenkins. 2020.01.09.</description>
        <label>Send Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seperation_Date__c</fullName>
        <description>STAA</description>
        <label>Retirement or Separation Date from EPA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Servicing_Personnel_Office__c</fullName>
        <label>Servicing Personnel Office</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second Approving Supervisor.  The end user may edit his approving supervisors from the "Edit My Approvers" page.</description>
        <label>Approving Supervisor 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Supervisor_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approving Supervisor.  The end user may edit his approving supervisor from the "Edit My Approvers" page.</description>
        <label>Approving Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Supervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <description>A list of the contact's supervisor(s) from FPPS.  Read-only.  Maintained by PASTA ETL.</description>
        <label>FPPS Supervisors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supv_Code_Descr_Of_Record__c</fullName>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>Supervisor Type of Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TQB_Ad_Hoc_Status__c</fullName>
        <label>TQB Ad-Hoc Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TQB_Contact_Type__c</fullName>
        <label>TQB Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-Hoc</fullName>
                </value>
                <value>
                    <fullName>Letter Writer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TQB_Role__c</fullName>
        <label>TQB Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Program/Region Representative</fullName>
                </value>
                <value>
                    <fullName>Peer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Timekeeper. The end user may edit his Timekeeper from the "Edit My Approvers" page.</description>
        <label>Time Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Time_Keeper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Training_Officer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Activated__c</fullName>
        <formula>If(User__r.IsActive,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Activation_Date__c</fullName>
        <description>The date the User got activated in BAP</description>
        <label>User Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>FTTA Application.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>e450_eBusiness_Registration_ID__c</fullName>
        <label>e450 eBusiness Registration ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>non_EPA_Personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>non-EPA Personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Total_Effort__c</fullName>
        <description>STAA</description>
        <label>% of Total Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>FTTA_License_Inventor</fullName>
        <columns>FULL_NAME</columns>
        <columns>EPA_File__c</columns>
        <columns>EPA_Agreement_License__c</columns>
        <columns>Inventor_Type__c</columns>
        <columns>Inventor_Amount__c</columns>
        <columns>Lab_Office_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FTTA_License_Inventor</value>
        </filters>
        <label>FTTA License Inventor</label>
    </listViews>
    <listViews>
        <fullName>FTTA_Partner_POC</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FTTA_Partner_POC</value>
        </filters>
        <label>FTTA Partner POC</label>
    </listViews>
    <listViews>
        <fullName>Filers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>e450_eBusiness_Registration_ID__c</columns>
        <columns>Ethics_Disclosure_Filing_Due_Date__c</columns>
        <columns>OGE_450_Form_Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>epa.gov</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.EPA_Person</value>
        </filters>
        <filters>
            <field>e450_eBusiness_Registration_ID__c</field>
            <operation>startsWith</operation>
            <value>r</value>
        </filters>
        <filters>
            <field>OGE_450_Form_Submitted_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>450 Filer Due Dates &amp; Submissions</label>
        <sharedTo>
            <group>BAP_Admins</group>
            <group>e450_DEO</group>
            <group>e450_Ethics_Official</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ORD-NRMRL-GWERD</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Problem_Solving_Corps_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Problem_Solving_Corps_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Problem Solving Corps Members</label>
    </listViews>
    <listViews>
        <fullName>RCU</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>RCU</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GAS_Vendor_Contacts</value>
        </filters>
        <label>GAS Vendor Contacts</label>
    </listViews>
    <listViews>
        <fullName>X450_Filer_Data</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>e450_eBusiness_Registration_ID__c</columns>
        <columns>Ethics_Disclosure_Filing_Due_Date__c</columns>
        <columns>OGE_450_Form_Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>epa.gov</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>inactive</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.EPA_Person</value>
        </filters>
        <filters>
            <field>Ethics_Disclosure_Filing_Due_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OGE_450_Form_Submitted_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>450 Filer Data</label>
        <sharedTo>
            <group>BAP_Admins</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>EPA_Person</fullName>
        <active>true</active>
        <description>The contact represents an EPA employee or contractor, who might (not) be a BAP user</description>
        <label>EPA Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_License_Inventor</fullName>
        <active>true</active>
        <description>FTTA License Inventor.</description>
        <label>FTTA License Inventor</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_Partner_POC</fullName>
        <active>true</active>
        <description>FTTA Partner POC</description>
        <label>FTTA Partner POC</label>
    </recordTypes>
    <recordTypes>
        <fullName>GAS_Vendor_Contacts</fullName>
        <active>true</active>
        <description>GAS Order Management</description>
        <label>GAS Vendor Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Contacts</fullName>
        <active>true</active>
        <description>General Contacts</description>
        <label>General Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>STAA_Application</fullName>
        <active>true</active>
        <description>EPA Scientific and Technological Achievement Awards</description>
        <label>STAA Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>TQB_Contacts</fullName>
        <active>true</active>
        <label>TQB Contacts</label>
    </recordTypes>
    <validationRules>
        <fullName>Percentage_of_Total_Effort_Limits</fullName>
        <active>false</active>
        <errorConditionFormula>of_Total_Effort__c &gt; 100</errorConditionFormula>
        <errorDisplayField>of_Total_Effort__c</errorDisplayField>
        <errorMessage>% of Total Effort must be less than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TQB_Validate_Adhoc_and_Letter_writer</fullName>
        <active>true</active>
        <description>TQB Application. Checks if the email, phone and address details are entered.</description>
        <errorConditionFormula>AND(

 RecordType.Name = 'TQB Contacts',
OR(
ISBLANK(  MailingCity ),
ISBLANK(  MailingState ), 
ISBLANK(  MailingCountry ),
ISBLANK(  MailingStreet ),
ISBLANK(  MailingPostalCode ),
ISBLANK( Email ),
ISBLANK(  Phone )
)
)</errorConditionFormula>
        <errorMessage>Enter Mailing Address, Email and Phone details.</errorMessage>
    </validationRules>
</CustomObject>